// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`conversion content should render conversion content 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": .emotion-1 {
  overflow-x: auto;
}

<body>
    <div>
      <div>
        <div>
          <div
            class="ms-FocusZone emotion-0 ms-Pivot root-109"
            data-focuszone-id="FocusZone1"
            role="tablist"
          >
            <button
              aria-selected="true"
              class="ms-Button ms-Button--action ms-Button--command ms-Pivot-link is-selected linkIsSelected-119"
              data-content="logs"
              data-is-focusable="true"
              data-title="logs"
              id="Pivot0-Tab0"
              name="logs"
              role="tab"
              tabindex="0"
              type="button"
            >
              <span
                class="ms-Button-flexContainer flexContainer-120"
                data-automationid="splitbuttonprimary"
              >
                <span
                  class="ms-Pivot-linkContent linkContent-115"
                >
                  <span
                    class="ms-Pivot-text text-116"
                  >
                     
                    logs
                  </span>
                </span>
              </span>
            </button>
            <button
              aria-selected="false"
              class="ms-Button ms-Button--action ms-Button--command ms-Pivot-link link-127"
              data-content="diagnostic.package"
              data-is-focusable="true"
              data-title="diagnostic.package"
              id="Pivot0-Tab1"
              name="diagnostic.package"
              role="tab"
              tabindex="-1"
              type="button"
            >
              <span
                class="ms-Button-flexContainer flexContainer-120"
                data-automationid="splitbuttonprimary"
              >
                <span
                  class="ms-Pivot-linkContent linkContent-115"
                >
                  <span
                    class="ms-Pivot-text text-116"
                  >
                     
                    diagnostic.package
                  </span>
                </span>
              </span>
            </button>
          </div>
          <div
            aria-hidden="false"
            aria-labelledby="Pivot0-Tab0"
            class="itemContainer-110"
            role="tabpanel"
          >
            <div>
              <div>
                <h3>
                  meta.data
                </h3>
                <div>
                  operationId: 
                  qqwer-asdf-zxcvzxcv-asdf-dgfh
                </div>
                <div>
                  conversionId: 
                  17
                </div>
              </div>
              <div>
                <h3>
                  operation.log
                </h3>
                <pre
                  class="emotion-1"
                >
                  {
    "foo": "bar",
    "baz": "blee blue blah blueberry dee"
}
                </pre>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": .emotion-1 {
  overflow-x: auto;
}

<div>
    <div>
      <div>
        <div
          class="ms-FocusZone emotion-0 ms-Pivot root-109"
          data-focuszone-id="FocusZone1"
          role="tablist"
        >
          <button
            aria-selected="true"
            class="ms-Button ms-Button--action ms-Button--command ms-Pivot-link is-selected linkIsSelected-119"
            data-content="logs"
            data-is-focusable="true"
            data-title="logs"
            id="Pivot0-Tab0"
            name="logs"
            role="tab"
            tabindex="0"
            type="button"
          >
            <span
              class="ms-Button-flexContainer flexContainer-120"
              data-automationid="splitbuttonprimary"
            >
              <span
                class="ms-Pivot-linkContent linkContent-115"
              >
                <span
                  class="ms-Pivot-text text-116"
                >
                   
                  logs
                </span>
              </span>
            </span>
          </button>
          <button
            aria-selected="false"
            class="ms-Button ms-Button--action ms-Button--command ms-Pivot-link link-127"
            data-content="diagnostic.package"
            data-is-focusable="true"
            data-title="diagnostic.package"
            id="Pivot0-Tab1"
            name="diagnostic.package"
            role="tab"
            tabindex="-1"
            type="button"
          >
            <span
              class="ms-Button-flexContainer flexContainer-120"
              data-automationid="splitbuttonprimary"
            >
              <span
                class="ms-Pivot-linkContent linkContent-115"
              >
                <span
                  class="ms-Pivot-text text-116"
                >
                   
                  diagnostic.package
                </span>
              </span>
            </span>
          </button>
        </div>
        <div
          aria-hidden="false"
          aria-labelledby="Pivot0-Tab0"
          class="itemContainer-110"
          role="tabpanel"
        >
          <div>
            <div>
              <h3>
                meta.data
              </h3>
              <div>
                operationId: 
                qqwer-asdf-zxcvzxcv-asdf-dgfh
              </div>
              <div>
                conversionId: 
                17
              </div>
            </div>
            <div>
              <h3>
                operation.log
              </h3>
              <pre
                class="emotion-1"
              >
                {
    "foo": "bar",
    "baz": "blee blue blah blueberry dee"
}
              </pre>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`conversion content should render conversion content logs tab 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": .emotion-1 {
  overflow-x: auto;
}

<body>
    <div>
      <div>
        <div>
          <div
            class="ms-FocusZone emotion-0 ms-Pivot root-109"
            data-focuszone-id="FocusZone9"
            role="tablist"
          >
            <button
              aria-selected="true"
              class="ms-Button ms-Button--action ms-Button--command ms-Pivot-link is-selected linkIsSelected-119"
              data-content="logs"
              data-is-focusable="true"
              data-title="logs"
              id="Pivot8-Tab0"
              name="logs"
              role="tab"
              tabindex="0"
              type="button"
            >
              <span
                class="ms-Button-flexContainer flexContainer-120"
                data-automationid="splitbuttonprimary"
              >
                <span
                  class="ms-Pivot-linkContent linkContent-115"
                >
                  <span
                    class="ms-Pivot-text text-116"
                  >
                     
                    logs
                  </span>
                </span>
              </span>
            </button>
            <button
              aria-selected="false"
              class="ms-Button ms-Button--action ms-Button--command ms-Pivot-link link-127"
              data-content="diagnostic.package"
              data-is-focusable="true"
              data-title="diagnostic.package"
              id="Pivot8-Tab1"
              name="diagnostic.package"
              role="tab"
              tabindex="-1"
              type="button"
            >
              <span
                class="ms-Button-flexContainer flexContainer-120"
                data-automationid="splitbuttonprimary"
              >
                <span
                  class="ms-Pivot-linkContent linkContent-115"
                >
                  <span
                    class="ms-Pivot-text text-116"
                  >
                     
                    diagnostic.package
                  </span>
                </span>
              </span>
            </button>
          </div>
          <div
            aria-hidden="false"
            aria-labelledby="Pivot8-Tab0"
            class="itemContainer-110"
            role="tabpanel"
          >
            <div>
              <div>
                <h3>
                  meta.data
                </h3>
                <div>
                  operationId: 
                  qqwer-asdf-zxcvzxcv-asdf-dgfh
                </div>
                <div>
                  conversionId: 
                  17
                </div>
              </div>
              <div>
                <h3>
                  operation.log
                </h3>
                <pre
                  class="emotion-1"
                >
                  {
    "foo": "bar",
    "baz": "blee blue blah blueberry dee"
}
                </pre>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": .emotion-1 {
  overflow-x: auto;
}

<div>
    <div>
      <div>
        <div
          class="ms-FocusZone emotion-0 ms-Pivot root-109"
          data-focuszone-id="FocusZone9"
          role="tablist"
        >
          <button
            aria-selected="true"
            class="ms-Button ms-Button--action ms-Button--command ms-Pivot-link is-selected linkIsSelected-119"
            data-content="logs"
            data-is-focusable="true"
            data-title="logs"
            id="Pivot8-Tab0"
            name="logs"
            role="tab"
            tabindex="0"
            type="button"
          >
            <span
              class="ms-Button-flexContainer flexContainer-120"
              data-automationid="splitbuttonprimary"
            >
              <span
                class="ms-Pivot-linkContent linkContent-115"
              >
                <span
                  class="ms-Pivot-text text-116"
                >
                   
                  logs
                </span>
              </span>
            </span>
          </button>
          <button
            aria-selected="false"
            class="ms-Button ms-Button--action ms-Button--command ms-Pivot-link link-127"
            data-content="diagnostic.package"
            data-is-focusable="true"
            data-title="diagnostic.package"
            id="Pivot8-Tab1"
            name="diagnostic.package"
            role="tab"
            tabindex="-1"
            type="button"
          >
            <span
              class="ms-Button-flexContainer flexContainer-120"
              data-automationid="splitbuttonprimary"
            >
              <span
                class="ms-Pivot-linkContent linkContent-115"
              >
                <span
                  class="ms-Pivot-text text-116"
                >
                   
                  diagnostic.package
                </span>
              </span>
            </span>
          </button>
        </div>
        <div
          aria-hidden="false"
          aria-labelledby="Pivot8-Tab0"
          class="itemContainer-110"
          role="tabpanel"
        >
          <div>
            <div>
              <h3>
                meta.data
              </h3>
              <div>
                operationId: 
                qqwer-asdf-zxcvzxcv-asdf-dgfh
              </div>
              <div>
                conversionId: 
                17
              </div>
            </div>
            <div>
              <h3>
                operation.log
              </h3>
              <pre
                class="emotion-1"
              >
                {
    "foo": "bar",
    "baz": "blee blue blah blueberry dee"
}
              </pre>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`conversion content should render nothing by default 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div />
  </body>,
  "container": <div />,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
